--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,34 @@
-.titulo{
-    text-align: center;
-    font-size: 25px;
+body{
+    margin: 0px;
 }
 
+.navbar{
+    padding: 20px;
+    font-size: 25px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    bottom: 50px;
+    -webkit-box-shadow: 0px 4px 7px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 4px 7px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 4px 7px 0px rgba(0,0,0,0.75);
+}
+
+.logo img{
+    width: 320px;
+    margin-right: 30px;
+}
+
+.navbar-direita div{
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.navbar-direita{
+    display: flex;
+    align-items: center;
+}
+
+.navbar-direita > *{
+    padding: 30px;
+}
